[project]
name = "atwtlib"
version = "0.1.3"
authors = [
  { name="winicu", email="purlifedwater@gmail.com" },
]
description = "A package that make some QoL feature for chemistry"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://winicu.me/package/atwtlib"
"Bug Tracker" = "https://winicu.me/package/atwtlib#issues"